minikube-config/deny.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
